--- a/catalog/Ton/Overview.mdx
+++ b/catalog/Ton/Overview.mdx
@@ -17,7 +17,11 @@ TON (The Open Network) is a decentralized blockchain platform initially develope
         TON Raw, unprocessed data on the TON chain, including blocks, transactions, and messages.
     </Card>
 
-    <Card title="Abstracted" icon="binary" href="./Abstracted">
+    <Card title="Decoded" icon="code" href="./Decoded">
+        TON Abstracted, abstracted data tables are built on top of raw data tables and provide a high-level view of the data.
+    </Card>
+
+    <Card title="Abstracted" icon="head-side-gear" href="./Abstracted">
         TON Abstracted, abstracted data tables are built on top of raw data tables and provide a high-level view of the data.
     </Card>
 </CardGroup>
