--- a/introduction/networks/delegators.mdx
+++ b/introduction/networks/delegators.mdx
@@ -21,4 +21,4 @@ for details refer to [tokenomics](/introduction/tokenomics)
 
 ### Community and Support
 
-Join the Chainbase delegator discord to collaborate with other delegators, share knowledge, and get support.
+Join the Chainbase delegator **[Discord](https://discord.gg/chainbase)** to collaborate with other delegators, share knowledge, and get support.
