--- a/catalog/Ton/Decoded.mdx
+++ b/catalog/Ton/Decoded.mdx
@@ -18,13 +18,13 @@ As Ton uses the TVM (TON Virtual Machine) as a core component of the network, sm
 ### Examples
 
 Log in to the chainbase console and select the decoded dataset to search for the smart contract name you want.
-![death spiral](../../images/catalog/decoded.jpg)
+![death spiral](../../images/catalog/ton-decoded-search.png)
 
 ### Executing query
 
-    <pre><code>{`select * FROM jetton_wallet_ton.jetton_transfer limit 10'`}</code></pre>
+    <pre><code>{`'select * FROM jetton_wallet_ton.jetton_transfer limit 10'`}</code></pre>
 
-![death spiral](../../../images/catalog/decoded02.jpg)
+![death spiral](../../images/catalog/decoded_ton_query.png)
 
 ## 1. decoded_messages
 ### Table Description
