docs[dex]:add On Hold annotation

--- a/catalog/Ethereum/Abstracted.mdx
+++ b/catalog/Ethereum/Abstracted.mdx
@@ -290,7 +290,7 @@ The ERC721_transfer event is a crucial component of the ERC721 token standard on
     ></iframe>
 </div>
 
-## 12.ethereum.liquidity
+## 12.ethereum.liquidity(On hold)
 ### Table Description
 The Dex_ethereum.liquidity table provides indexed views of all DEX liquidity for the chain. All DEX liquidity tables follows the same database schema presented below.
 ### Column Descriptions
@@ -368,7 +368,7 @@ NFTs are unique digital assets that are stored on a blockchain, which is a decen
         scrolling="no"
     ></iframe>
 </div>
-## 15.ethereum.pools
+## 15.ethereum.pools(On Hold)
 ### Table Description
 The dex_ethereum.pools table provides indexed views of all DEX pools created for the chain. All DEX pools tables follows the same database schema presented below.
 ### Column Descriptions
@@ -394,7 +394,7 @@ The dex_ethereum.pools table provides indexed views of all DEX pools created for
         scrolling="no"
     ></iframe>
 </div>
-## 16.ethereum.swaps
+## 16.ethereum.swaps(On Hold)
 ### Table Description
 The dex_ethereum.swaps table provides indexed views of all DEX swaps transacted for the chain. All DEX swaps tables follows the same database schema presented below.
 ### Column Descriptions
