docs[dex]:add On Hold annotation

--- a/catalog/Ethereum/Abstracted.mdx
+++ b/catalog/Ethereum/Abstracted.mdx
@@ -290,7 +290,7 @@ The ERC721_transfer event is a crucial component of the ERC721 token standard on
     ></iframe>
 </div>
 
-## 12.ethereum.liquidity(On hold)
+## 12.ethereum.liquidity(On Hold)
 ### Table Description
 The Dex_ethereum.liquidity table provides indexed views of all DEX liquidity for the chain. All DEX liquidity tables follows the same database schema presented below.
 ### Column Descriptions
