feat[ton]:add tutorial link

--- a/catalog/Ton/Abstracted.mdx
+++ b/catalog/Ton/Abstracted.mdx
@@ -190,3 +190,7 @@ The nft_holders_history table captures the historical ownership of each NFT on t
         scrolling="no"
     ></iframe>
 </div>
+
+### Quick Start
+
+ - [Data Cloud](https://docs.chainbase.com/platform/features/datacloud/overview#quickstart)
