--- a/catalog/Ton/Decoded.mdx
+++ b/catalog/Ton/Decoded.mdx
@@ -58,3 +58,7 @@ The ton.decoded_messages table is designed to parse the message body according t
         scrolling="no"
     ></iframe>
 </div>
+
+### Quick Start
+
+ - [Data Cloud](https://docs.chainbase.com/platform/features/datacloud/overview#quickstart)
