--- a/catalog/Ton/Raw.mdx
+++ b/catalog/Ton/Raw.mdx
@@ -157,3 +157,7 @@ Masterchain block stores only the reference to lastest shard blocks of workchain
         scrolling="no"
     ></iframe>
 </div>
+
+### Quick Start
+
+ - [Data Cloud](https://docs.chainbase.com/platform/features/datacloud/overview#quickstart)
