--- a/catalog/Ton/Overview.mdx
+++ b/catalog/Ton/Overview.mdx
@@ -25,3 +25,7 @@ TON (The Open Network) is a decentralized blockchain platform initially develope
         TON Abstracted, abstracted data tables are built on top of raw data tables and provide a high-level view of the data.
     </Card>
 </CardGroup>
+
+### Quick Start
+
+ - [Data Cloud](https://docs.chainbase.com/platform/features/datacloud/overview#quickstart)
