[doc:] Update manuscript-related documentation

--- a/core-concepts/manuscript/overview.mdx
+++ b/core-concepts/manuscript/overview.mdx
@@ -1,4 +1,7 @@
-# Core Values and Capabilities of Manuscript
+# Manuscript
+
+<Check>"The Manuscript code repository is now officially open-source:  https://github.com/chainbase-labs/manuscript-core"</Check>
+
 
 # Introduction to Manuscript
 
