[doc:] Update manuscript-gui documentation

--- a/core-concepts/manuscript/QuickStart/advanced_options.mdx
+++ b/core-concepts/manuscript/QuickStart/advanced_options.mdx
@@ -1,12 +1,9 @@
 ---
-title: "Protocol Design"
+title: "4. Advanced Options"
 ---
 
 # Overview
-
-Historically, alchemists often had formula books, also known as "alchemical manuscripts". These books contained recipes, procedures, and philosophical musings on turning base metals into gold, creating elixirs for immortality, and other transformative processes. The contents were typically written in cryptic and symbolic language to keep the knowledge secretive and exclusive.
-
-Now, the datasets in the Chainbase Network is like base metals, and the alchemists (developers) can use Manuscripts to process this data, extracting greater value from the existing data.
+The datasets in the Chainbase Network is like base metals, and the alchemists (developers) can use Manuscripts to process this data, extracting greater value from the existing data.
 
 ![death spiral](../../images/manuscripts_overview.png)
 
