--- a/core-concepts/manuscript/overview.mdx
+++ b/core-concepts/manuscript/overview.mdx
@@ -1,13 +1,10 @@
 # Manuscript
+![manuscript_github.png](../../images/manuscripts/manuscript_github.png)
+<Check>👉👉 https://github.com/chainbase-labs/manuscript-core</Check>
 
-<Check>"The Manuscript code repository is now officially open-source:  https://github.com/chainbase-labs/manuscript-core"</Check>
 
-
-# Introduction to Manuscript
-
-Chainbase is a global blockchain data network with an extensive dataset and cluster worldwide. If we compare Chainbase's global data network to a country, then Manuscript would be the language of this data network nation. Manuscript plays a crucial role in the Chainbase ecosystem, serving as a bridge connecting various data, services, and users.
-
-Manuscript is not just a language specification; it's a protocol, framework, and toolkit designed to simplify and unify data access and processing methods. Through Manuscript, developers and users can more easily interact with the vast amount of data in the Chainbase network, whether querying, analyzing, or applying this data.
+# What is Manuscript?
+Manuscript is a revolutionary blockchain data streaming framework. With Manuscript, you can seamlessly integrate on-chain and off-chain data into target data storage for unrestricted querying and analysis.
 
 # Vision of Manuscript
 
