[doc:] Update manuscript-gui documentation

--- a/core-concepts/manuscript/QuickStart/run_manuscript.mdx
+++ b/core-concepts/manuscript/QuickStart/run_manuscript.mdx
@@ -6,7 +6,7 @@ title: "3. Run a manuscript"
 
 ### 1. 📗 Local
 You can use our GUI tool to quickly deploy Manuscript locally.
-![manuscript_deploy.png](../../images/manuscripts/manuscript_deploy.png)
+![manuscript_deploy.png](../../../images/manuscripts/manuscript_deploy.png)
 
 ### 2. 📚 Network
 We are about to launch the Chainbase network Manuscript environment, allowing users to deploy Manuscript directly to the Chainbase network.
