[doc:] Update chainbase litepaper.mdx

--- a/introduction/litepaper.mdx
+++ b/introduction/litepaper.mdx
@@ -2,6 +2,8 @@
 title: 'Litepaper'
 ---
 
-[Chainbase: The Decentralized Omnichain
-Data Network for Open AGI Economy](../pdf/Chainese_litepaper.pdf)
-
+<p>
+    <a href="../pdf/Chainese_litepaper.pdf" download="Chainese_litepaper.pdf">
+        Chainbase: The Decentralized Omnichain Data Network for Open AGI Economy
+    </a>
+</p>
