[doc:] Update chainbase litepaper.mdx

--- a/introduction/litepaper.mdx
+++ b/introduction/litepaper.mdx
@@ -2,6 +2,10 @@
 title: 'Litepaper'
 ---
 
+<a href="https://github.com/chainbase-labs/chainbase-docs/blob/main/pdf/Chainbase_litepaper.pdf" target="_blank">
+    <img src="../images/Chainbase_litepaper.jpg" alt="litepaper" width="300" height="200"></img>
+</a>
+
 <p>
     <a href="../pdf/Chainese_litepaper.pdf" download="Chainese_litepaper.pdf">
         Chainbase: The Decentralized Omnichain Data Network for Open AGI Economy
