feat[ton]: dataset

--- a/platform/supported-networks/supported-networks.mdx
+++ b/platform/supported-networks/supported-networks.mdx
@@ -21,6 +21,6 @@ We support the following networks in real-time across multiple data types. More 
 |                     | Merlin                           | ✔            | ✔       |             |                | ✔            |
 | **Non EVM**         | Bitcoin                          |              | \*      |             | ✔              |              |
 |                     | Sui                              | ✔            |         |             | ✔              |              |
-|                     | Ton                              | ✔            | ✔       |             |                |              |
+|                     | Ton                              | ✔            | ✔       | ✔           | ✔              |              |
 |                     | Tron                             | ✔            | ✔       |             |                |              |
 |                     | *Solana\**                       |              | \*      | \*          | \*             | \*           |
