--- a/catalog/Ton/Overview.mdx
+++ b/catalog/Ton/Overview.mdx
@@ -18,7 +18,7 @@ TON (The Open Network) is a decentralized blockchain platform initially develope
     </Card>
 
     <Card title="Decoded" icon="code" href="./Decoded">
-        TON Abstracted, abstracted data tables are built on top of raw data tables and provide a high-level view of the data.
+        TON Decoded, decoded transaction data, facilitating easier analysis and deeper understanding of smart contract operations.
     </Card>
 
     <Card title="Abstracted" icon="head-side-gear" href="./Abstracted">
