--- a/introduction/litepaper.mdx
+++ b/introduction/litepaper.mdx
@@ -7,7 +7,7 @@ title: 'Litepaper'
 </a>
 
 <p>
-    <a href="../pdf/Chainese_litepaper.pdf" download="Chainese_litepaper.pdf">
+    <a href="https://github.com/chainbase-labs/chainbase-docs/blob/main/pdf/Chainbase_litepaper.pdf" download="Chainese_litepaper.pdf">
         Chainbase: The Decentralized Omnichain Data Network for Open AGI Economy
     </a>
 </p>
