[doc:] Update interface downtime

--- a/platform/features/api/sql-api/datacloud-api-classic.mdx
+++ b/platform/features/api/sql-api/datacloud-api-classic.mdx
@@ -5,7 +5,9 @@ title: "Data Cloud API (Deprecated)"
 <Warning>
 ❗️ Warning
 
-Version Classic will not update new features. Recommend using our latest version of the [DataCloud API.](/platform/features/api/sql-api/datacloud-task-api)
+The feature will be discontinued and no longer available on [ 2024-12-31 ]
+
+Recommend using our latest version of the [DataCloud API.](/platform/features/api/sql-api/datacloud-task-api)
 </Warning>
 
 <Info>
