[doc:] Update manuscript zone

--- a/core-concepts/manuscript/QuickStart/advanced_options.mdx
+++ b/core-concepts/manuscript/QuickStart/advanced_options.mdx
@@ -5,7 +5,7 @@ title: "4. Advanced Options"
 # Overview
 The datasets in the Chainbase Network is like base metals, and the alchemists (developers) can use Manuscripts to process this data, extracting greater value from the existing data.
 
-![death spiral](../../images/manuscripts_overview.png)
+![death spiral](../../../images/manuscripts_overview.png)
 
 # Protocol
 
