fix: update Twitter URL to x.com format
Updated the Twitter URL from https://twitter.com/youngbuddha108 to https://x.com/youngbuddha108 to reflect the platform's rebranding.

--- a/catalog/OtherEvm/Mint_Testnet.mdx
+++ b/catalog/OtherEvm/Mint_Testnet.mdx
@@ -5,7 +5,7 @@ iconType: "light"
 ---
 -- NFT mint aggregator
 
-mint.fun is an NFT mint aggregator that shows users every project that is currently minting, ranked by popularity, so they don't have to search across various websites, Twitter, Discord, and group chats to figure out what to mint. It is built by the team at Context.
+mint.fun is an NFT mint aggregator that shows users every project that is currently minting, ranked by popularity, so they don't have to search across various websites, X, Discord, and group chats to figure out what to mint. It is built by the team at Context.
 
 ### The MetaData of the Mint Testnet Blockchain
 
