--- a/catalog/OtherEvm/Shyft_Mainnet.mdx
+++ b/catalog/OtherEvm/Shyft_Mainnet.mdx
@@ -9,7 +9,7 @@ The Shyft Network is a public protocol designed to validate identity and enable 
 
 ### The MetaData of the Shyft Mainnet Blockchain
 
-**Twitter Link**: https://twitter.com/shyftnetwork
+**Twitter Link**: https://x.com/shyftnetwork
 
 **Tags**: Infra, On-Chain Compliance Solutions
 
