--- a/catalog/OtherEvm/XDC_Apothem_Network.mdx
+++ b/catalog/OtherEvm/XDC_Apothem_Network.mdx
@@ -9,7 +9,7 @@ The XDC Network is a blockchain technology solution built by XinFin. It is a glo
 
 ### The MetaData of the XDC Apothem Network Blockchain
 
-**Twitter Link**: https://twitter.com/XinFin_Official
+**Twitter Link**: https://x.com/XinFin_Official
 
 **Documentation**: https://xinfin.org/docs/whitepaper-tech.pdf
 
