feat(docs): add multi-language support for litepaper
1. Convert litepaper page to use tabbed interface
2. Add Korean language option with dedicated preview and download
3. Update download links with appropriate filenames
4. Improve accessibility with better alt text for images

--- a/introduction/litepaper.mdx
+++ b/introduction/litepaper.mdx
@@ -2,12 +2,27 @@
 title: 'Litepaper'
 ---
 
-<a href="https://github.com/chainbase-labs/chainbase-docs/blob/main/pdf/Chainbase_litepaper.pdf" target="_blank">
-    <img src="../images/chainbase_litepaper.jpg" alt="litepaper" width="700" height="900"></img>
-</a>
-
-<p>
-    <a href="https://raw.githubusercontent.com/chainbase-labs/chainbase-docs/refs/heads/main/pdf/Chainbase_litepaper.pdf" download="Chainese_litepaper.pdf">
-        Chainbase: The Decentralized Omnichain Data Network for Open AGI Economy
+<Tabs>
+  <Tab title="English">
+    <a href="https://github.com/chainbase-labs/chainbase-docs/blob/main/pdf/Chainbase_litepaper.pdf" target="_blank">
+      <img src="../images/chainbase_litepaper.jpg" alt="English Litepaper" width="700" height="900" />
     </a>
-</p>
+
+    <p>
+      <a href="https://raw.githubusercontent.com/chainbase-labs/chainbase-docs/refs/heads/main/pdf/Chainbase_litepaper.pdf" download="Chainbase_litepaper_en.pdf">
+        Download: Chainbase: The Decentralized Omnichain Data Network for Open AGI Economy
+      </a>
+    </p>
+  </Tab>
+  <Tab title="한국어">
+    <a href="https://github.com/chainbase-labs/chainbase-docs/blob/main/pdf/Chainbase_litepaper_KR.pdf" target="_blank">
+      <img src="../images/chainbase_litepaper_kr.jpg" alt="Korean Litepaper" width="700" height="900" />
+    </a>
+
+    <p>
+      <a href="https://raw.githubusercontent.com/chainbase-labs/chainbase-docs/refs/heads/main/pdf/Chainbase_litepaper_KR.pdf" download="Chainbase_litepaper_kr.pdf">
+        다운로드: Chainbase: 오픈 AGI 경제를 위한 탈중앙화 옴니체인 데이터 네트워크
+      </a>
+    </p>
+  </Tab>
+</Tabs>
